--- a/dict/human_body.html
+++ b/dict/human_body.html
@@ -28,8 +28,8 @@
     <li><a href="https://www.msdmanuals.com/home/fundamentals/the-human-body">
         MSD Manual: The human body
     </a></li>
-    <li><a href="https://training.seer.cancer.gov/anatomy/skeletal/divisions/">
-        Divisions of the Skeleton, SEER Training Models, National Cancer Institute
+    <li><a href="https://training.seer.cancer.gov/anatomy/">
+        Anatomy & Physiology, SEER Training Models, National Cancer Institute
     </a></li>
 </ul>
 
@@ -832,6 +832,17 @@
 </tr>
 <tr>
     <td></td>
+    <td></td>
+    <td>
+        <ruby>漿<rt>しょう</rt></ruby>
+        <ruby>膜<rt>まく</rt></ruby>
+    </td>
+    <td></td>
+    <td></td>
+    <td>serous membrane /ˈsɪər əs/</td>
+</tr>
+<tr>
+    <td></td>
     <td colspan="2">
         <ruby>器官<rt>きかん</rt></ruby>
     </td>
@@ -930,28 +941,34 @@
 </tr>
 <tr>
     <td></td>
-    <td colspan="2">
+    <td></td>
+    <td>
         <ruby>動脈<rt>どうみゃく</rt></ruby>
     </td>
     <td></td>
-    <td colspan="2">artery /ˈɑr tə ri/</td>
+    <td></td>
+    <td>artery /ˈɑr tə ri/</td>
 </tr>
 <tr>
     <td></td>
-    <td colspan="2">
+    <td></td>
+    <td>
         <ruby>静脈<rt>じょうみゃく</rt></ruby>
     </td>
     <td></td>
-    <td colspan="2">vein</td>
+    <td></td>
+    <td>vein</td>
 </tr>
 <tr>
     <td></td>
-    <td colspan="2">
+    <td></td>
+    <td>
         <ruby>毛細<rt>もうさい</rt></ruby>
         <ruby>血管<rt>けっかん</rt></ruby>
     </td>
     <td></td>
-    <td colspan="2">capillaries /ˈkæp əˌlɛr iz/</td>
+    <td></td>
+    <td>capillaries /ˈkæp əˌlɛr iz/</td>
 </tr>
 
 <!-------------------------------------------------------->
@@ -975,21 +992,25 @@
 </tr>
 <tr>
     <td></td>
-    <td colspan="2">
+    <td></td>
+    <td>
         <ruby>気<rt>き</rt></ruby>
         <ruby>管<rt>かん</rt></ruby>
     </td>
     <td></td>
-    <td colspan="2">trachea /ˈtreɪ ki ə/</td>
+    <td></td>
+    <td>trachea /ˈtreɪ ki ə/</td>
 </tr>
 <tr>
     <td></td>
-    <td colspan="2">
+    <td></td>
+    <td>
         <ruby>気管<rt>きかん</rt></ruby>
         <ruby>支<rt>し</rt></ruby>
     </td>
     <td></td>
-    <td colspan="2">bronchus /ˈbrɒŋ kəs/, (pl) bronchi /ˈbrɒŋ ki/</td>
+    <td></td>
+    <td>bronchus /ˈbrɒŋ kəs/, (pl) bronchi /ˈbrɒŋ ki/</td>
 </tr>
 <tr>
     <td></td>
@@ -1001,12 +1022,111 @@
 </tr>
 <tr>
     <td></td>
+    <td></td>
+    <td>
+        <ruby>上<rt>じょう</rt></ruby>
+        <ruby>葉<rt>よう</rt></ruby>
+    </td>
+    <td></td>
+    <td></td>
+    <td>upper lobe /loʊb/</td>
+</tr>
+<tr>
+    <td></td>
+    <td></td>
+    <td>
+        <ruby>中<rt>ちゅう</rt></ruby>
+        <ruby>葉<rt>よう</rt></ruby>
+    </td>
+    <td></td>
+    <td></td>
+    <td>middle lobe</td>
+</tr>
+<tr>
+    <td></td>
+    <td></td>
+    <td>
+        <ruby>下<rt>か</rt></ruby>
+        <ruby>葉<rt>よう</rt></ruby>
+    </td>
+    <td></td>
+    <td></td>
+    <td>lower lobe</td>
+</tr>
+<tr>
+    <td></td>
+    <td></td>
+    <td>
+        <ruby>肺<rt>はい</rt></ruby>
+        <ruby>胞<rt>ほう</rt></ruby>
+    </td>
+    <td></td>
+    <td></td>
+    <td>alveolus /ælˈvi ə ləs/, (pl) alveoli /ælˈvi əˌlaɪ/</td>
+</tr>
+<tr>
+    <td></td>
+    <td></td>
+    <td>
+        <ruby>肺<rt>はい</rt></ruby>
+        <ruby>動脈<rt>どうみゃく</rt></ruby>
+    </td>
+    <td></td>
+    <td></td>
+    <td>pulmonary artery /ˈpʌl məˌnɛr i/</td>
+</tr>
+<tr>
+    <td></td>
+    <td></td>
+    <td>
+        <ruby>肺<rt>はい</rt></ruby>
+        <ruby>静脈<rt>じょうみゃく</rt></ruby>
+    </td>
+    <td></td>
+    <td></td>
+    <td>pulmonary vein</td>
+</tr>
+<tr>
+    <td></td>
     <td colspan="2">
+        <ruby>胸<rt>きょう</rt></ruby>
+        <ruby>郭<rt>かく</rt></ruby>
+    </td>
+    <td></td>
+    <td colspan="2">rib cage, thorax /ˈθɔr æks/</td>
+</tr>
+<tr>
+    <td></td>
+    <td></td>
+    <td>
+        <ruby>胸<rt>きょう</rt></ruby>
+        <ruby>腔<rt>くう</rt></ruby>
+    </td>
+    <td></td>
+    <td></td>
+    <td>thoracic cavity /θɔˈræs ɪk/</td>
+</tr>
+<tr>
+    <td></td>
+    <td></td>
+    <td>
+        <ruby>胸<rt>きょう</rt></ruby>
+        <ruby>膜<rt>まく</rt></ruby>
+    </td>
+    <td></td>
+    <td></td>
+    <td>pleura /ˈplʊər ə/</td>
+</tr>
+<tr>
+    <td></td>
+    <td></td>
+    <td>
         <ruby>横<rt>おう</rt></ruby>
         <ruby>隔膜<rt>かくまく</rt></ruby>
     </td>
     <td></td>
-    <td colspan="2">diaphragm /ˈdaɪ əˌfræm/</td>
+    <td></td>
+    <td>diaphragm /ˈdaɪ əˌfræm/</td>
 </tr>
 
 <!-------------------------------------------------------->
@@ -1022,20 +1142,30 @@
 <tr>
     <td></td>
     <td colspan="2">
-        <ruby>消化<rt>しょうか</rt></ruby>
-        <ruby>器<rt>き</rt></ruby>
-        <ruby>系<rt>けい</rt></ruby>
-    </td>
-    <td></td>
-    <td colspan="2">gastrointestinal system /ˌgæs troʊ ɪnˈtɛs tə nl/</td>
-</tr>
-<tr>
-    <td></td>
-    <td colspan="2">
         <ruby>食道<rt>しょくどう</rt></ruby>
     </td>
     <td></td>
     <td colspan="2">esophagus /ɪˈsɒf ə gəs/</td>
+</tr>
+<tr>
+    <td></td>
+    <td colspan="2">
+        <ruby>腹<rt>ふく</rt></ruby>
+        <ruby>腔<rt>くう</rt></ruby>
+    </td>
+    <td></td>
+    <td colspan="2">abdomen, abdominal cavity /æbˈdɒm ə nl/</td>
+</tr>
+<tr>
+    <td></td>
+    <td></td>
+    <td>
+        <ruby>腹<rt>ふく</rt></ruby>
+        <ruby>膜<rt>まく</rt></ruby>
+    </td>
+    <td></td>
+    <td></td>
+    <td>peritoneum /ˌpɛr ɪ təˈni əm/</td>
 </tr>
 <tr>
     <td></td>
@@ -1048,43 +1178,82 @@
 <tr>
     <td></td>
     <td colspan="2">
+        <ruby>腸<rt>ちょう</rt></ruby>
+    </td>
+    <td></td>
+    <td colspan="2">bowel /ˈbaʊ əl/</td>
+</tr>
+<tr>
+    <td></td>
+    <td></td>
+    <td>
+        <ruby>腸<rt>ちょう</rt></ruby>
+        <ruby>壁<rt>へき</rt></ruby>
+    </td>
+    <td></td>
+    <td></td>
+    <td>bowel wall</td>
+</tr>
+<tr>
+    <td></td>
+    <td></td>
+    <td>
         <ruby>十二指<rt>じゅうにし</rt></ruby>
         <ruby>腸<rt>ちょう</rt></ruby>
     </td>
     <td></td>
-    <td colspan="2">duodenum /ˌdu əˈdi nəm/</td>
+    <td></td>
+    <td>duodenum /ˌdu əˈdi nəm/</td>
 </tr>
 <tr>
     <td></td>
-    <td colspan="2">
+    <td></td>
+    <td>
         <ruby>小腸<rt>しょうちょう</rt></ruby>
     </td>
     <td></td>
-    <td colspan="2">small intestine /ɪnˈtɛs tɪn/</td>
+    <td></td>
+    <td>small intestine /ɪnˈtɛs tɪn/</td>
 </tr>
 <tr>
     <td></td>
-    <td colspan="2">
+    <td></td>
+    <td>
         <ruby>大腸<rt>だいちょう</rt></ruby>
     </td>
     <td></td>
-    <td colspan="2">large intestine</td>
+    <td></td>
+    <td>colon, large intestine</td>
 </tr>
 <tr>
     <td></td>
-    <td colspan="2">
+    <td></td>
+    <td>
+        <ruby>虫垂<rt>ちゅうすい</rt></ruby>
+    </td>
+    <td></td>
+    <td></td>
+    <td>appendix</td>
+</tr>
+<tr>
+    <td></td>
+    <td></td>
+    <td>
         <ruby>直腸<rt>ちょくちょう</rt></ruby>
     </td>
     <td></td>
-    <td colspan="2">rectum /ˈrɛk təm/</td>
+    <td></td>
+    <td>rectum /ˈrɛk təm/</td>
 </tr>
 <tr>
     <td></td>
-    <td colspan="2">
+    <td></td>
+    <td>
         <ruby>肛門<rt>こうもん</rt></ruby>
     </td>
     <td></td>
-    <td colspan="2">anus</td>
+    <td></td>
+    <td>anus</td>
 </tr>
 <tr>
     <td></td>
@@ -1106,12 +1275,14 @@
 </tr>
 <tr>
     <td></td>
-    <td colspan="2">
+    <td></td>
+    <td>
         <ruby>胆<rt>たん</rt></ruby>
         <ruby>管<rt>かん</rt></ruby>
     </td>
     <td></td>
-    <td colspan="2">biliary tract</td>
+    <td></td>
+    <td>biliary tract</td>
 </tr>
 <tr>
     <td></td>
@@ -1121,14 +1292,6 @@
     </td>
     <td></td>
     <td colspan="2">pancreas /ˈpæn kri əs/</td>
-</tr>
-<tr>
-    <td></td>
-    <td colspan="2">
-        <ruby>虫垂<rt>ちゅうすい</rt></ruby>
-    </td>
-    <td></td>
-    <td colspan="2">appendix</td>
 </tr>
 
 <!-------------------------------------------------------->
@@ -1169,6 +1332,25 @@
 <tr>
     <td></td>
     <td colspan="2">
+        <ruby>脳<rt>のう</rt></ruby>
+        <ruby>下垂<rt>かすい</rt></ruby>
+        <ruby>体<rt>たい</rt></ruby>
+    </td>
+    <td></td>
+    <td colspan="2">pituitary gland /pɪˈtu ɪˌtɛr i/</td>
+</tr>
+<tr>
+    <td></td>
+    <td colspan="2">
+        <ruby>松果<rt>しょうか</rt></ruby>
+        <ruby>体<rt>たい</rt></ruby>
+    </td>
+    <td></td>
+    <td colspan="2">pineal gland /ˈpɪn i əl/</td>
+</tr>
+<tr>
+    <td></td>
+    <td colspan="2">
         <ruby>甲状<rt>こうじょう</rt></ruby>
         <ruby>腺<rt>せん</rt></ruby>
     </td>
@@ -1202,25 +1384,6 @@
     </td>
     <td></td>
     <td colspan="2">accessory cortex</td>
-</tr>
-<tr>
-    <td></td>
-    <td colspan="2">
-        <ruby>脳<rt>のう</rt></ruby>
-        <ruby>下垂<rt>かすい</rt></ruby>
-        <ruby>体<rt>たい</rt></ruby>
-    </td>
-    <td></td>
-    <td colspan="2">pituitary gland /pɪˈtu ɪˌtɛr i/</td>
-</tr>
-<tr>
-    <td></td>
-    <td colspan="2">
-        <ruby>松果<rt>しょうか</rt></ruby>
-        <ruby>体<rt>たい</rt></ruby>
-    </td>
-    <td></td>
-    <td colspan="2">pineal gland /ˈpɪn i əl/</td>
 </tr>
 
 <!-------------------------------------------------------->
@@ -1329,19 +1492,34 @@
 </tr>
 <tr>
     <td></td>
-    <td colspan="2">
+    <td></td>
+    <td>
         <ruby>腱<rt>けん</rt></ruby>
     </td>
     <td></td>
-    <td colspan="2">tendon /ˈtɛn dən/</td>
+    <td></td>
+    <td>tendon /ˈtɛn dən/</td>
 </tr>
 <tr>
     <td></td>
-    <td colspan="2">
-        <ruby>靱帯<rt>じんたい</rt></ruby>
+    <td></td>
+    <td>
+        <ruby>腸<rt>ちょう</rt></ruby>
+        <ruby>壁<rt>へき</rt></ruby>
     </td>
     <td></td>
-    <td colspan="2">ligament /ˈlɪg ə mənt/</td>
+    <td></td>
+    <td>bowel wall</td>
+</tr>
+<tr>
+    <td></td>
+    <td></td>
+    <td>
+        <ruby><rt></rt></ruby>
+    </td>
+    <td></td>
+    <td></td>
+    <td></td>
 </tr>
 <tr>
     <td></td>
@@ -1534,6 +1712,16 @@
     <td></td>
     <td></td>
     <td>intervertebral disk /ˌɪn tərˈvɜr tə brəl/</td>
+</tr>
+<tr>
+    <td></td>
+    <td></td>
+    <td>
+        <ruby>靱帯<rt>じんたい</rt></ruby>
+    </td>
+    <td></td>
+    <td></td>
+    <td>ligament /ˈlɪg ə mənt/</td>
 </tr>
 <tr>
     <td></td>
