--- a/dict/human_body.html
+++ b/dict/human_body.html
@@ -1529,7 +1529,110 @@
     <td></td>
     <td></td>
     <td>
-        capillaries /ˈkæp əˌlɛr iz/
+        blood capillary /ˈkæp əˌlɛr i/
+    </td>
+</tr>
+<tr>
+    <td></td>
+    <td colspan="2">
+        リンパ
+        <ruby>管<rt>かん</rt></ruby>
+    </td>
+    <td></td>
+    <td colspan="2">
+        lymphatic vessel /lɪmˈfæt ɪk/
+    </td>
+</tr>
+<tr>
+    <td></td>
+    <td></td>
+    <td>
+        <ruby>毛細<rt>もうさい</rt></ruby>
+        リンパ
+        <ruby>管<rt>かん</rt></ruby>
+    </td>
+    <td></td>
+    <td></td>
+    <td>
+        lymphatic capillary
+    </td>
+</tr>
+<tr>
+    <td></td>
+    <td></td>
+    <td>
+        <ruby>浸透<rt>しんとう</rt></ruby>
+        <ruby>圧<rt>あつ</rt></ruby>
+    </td>
+    <td></td>
+    <td></td>
+    <td>
+        osmotic pressure /ɒzˈmoʊ tɪk/
+    </td>
+</tr>
+<tr>
+    <td></td>
+    <td></td>
+    <td>
+        リンパ
+        <ruby>液<rt>えき</rt></ruby>
+    </td>
+    <td></td>
+    <td></td>
+    <td>
+        lymph /lɪmf/
+    </td>
+</tr>
+<tr>
+    <td></td>
+    <td></td>
+    <td>
+        リンパ
+        <ruby>節<rt>せつ</rt></ruby>
+    </td>
+    <td></td>
+    <td></td>
+    <td>
+        lymph /lɪmf/
+    </td>
+</tr>
+<tr>
+    <td></td>
+    <td></td>
+    <td>
+        <ruby>脾<rt>ひ</rt></ruby>
+        <ruby>臓<rt>ぞう</rt></ruby>
+    </td>
+    <td></td>
+    <td></td>
+    <td>
+        spleen
+    </td>
+</tr>
+<tr>
+    <td></td>
+    <td></td>
+    <td>
+        <ruby>胸<rt>きょう</rt></ruby>
+        <ruby>腺<rt>せん</rt></ruby>
+    </td>
+    <td></td>
+    <td></td>
+    <td>
+        thymus /ˈθaɪ məs/
+    </td>
+</tr>
+<tr>
+    <td></td>
+    <td></td>
+    <td>
+        <ruby>扁桃<rt>へんとう</rt></ruby>
+        <ruby>腺<rt>せん</rt></ruby>
+    </td>
+    <td></td>
+    <td></td>
+    <td>
+        tonsil /ˈtɒn səl/
     </td>
 </tr>
 
@@ -2072,7 +2175,7 @@
         (5.1.8.)
     </td>
     <td colspan="3">
-        Blood and hematopoietic tissue
+        blood and hematopoietic tissue
     </td>
 </tr>
 <tr>
@@ -2132,28 +2235,6 @@
         bone marrow
     </td>
 </tr>
-<tr>
-    <td></td>
-    <td colspan="2">
-        <ruby>脾<rt>ひ</rt></ruby>
-        <ruby>臓<rt>ぞう</rt></ruby>
-    </td>
-    <td></td>
-    <td colspan="2">
-        spleen
-    </td>
-</tr>
-<tr>
-    <td></td>
-    <td colspan="2">
-        <ruby>胸<rt>きょう</rt></ruby>
-        <ruby>腺<rt>せん</rt></ruby>
-    </td>
-    <td></td>
-    <td colspan="2">
-        thymus /ˈθaɪ məs/
-    </td>
-</tr>
 
 <!-------------------------------------------------------->
 <tr>
@@ -2164,6 +2245,17 @@
     </td>
     <td colspan="3">
         immune system
+    </td>
+</tr>
+<tr>
+    <td></td>
+    <td></td>
+    <td>
+        <ruby><rt></rt></ruby>
+    </td>
+    <td></td>
+    <td></td>
+    <td>
     </td>
 </tr>
 
