--- a/dict/human_body.html
+++ b/dict/human_body.html
@@ -771,18 +771,21 @@
     <td></td>
     <td></td>
     <td>
-        バクテリア
+        <ruby>細<rt>さい</rt></ruby>
+        <ruby>菌<rt>きん</rt></ruby>
     </td>
     <td></td>
     <td></td>
     <td>
-        bacteria
+        bacterium /bækˈtɪər i əm/, (pl) bacteria
     </td>
 </tr>
 <tr>
     <td></td>
     <td></td>
     <td>
+        <ruby>真<rt>しん</rt></ruby>
+        <ruby>菌<rt>きん</rt></ruby>、
         <ruby>菌<rt>きん</rt></ruby>
         <ruby>類<rt>るい</rt></ruby>
     </td>
@@ -996,18 +999,6 @@
     <td></td>
     <td colspan="2">
         connective tissue
-    </td>
-</tr>
-<tr>
-    <td></td>
-    <td></td>
-    <td>
-        <ruby>軟骨<rt>なんこつ</rt></ruby>
-    </td>
-    <td></td>
-    <td></td>
-    <td>
-        cartilage /ˈkɑr tl ɪdʒ/
     </td>
 </tr>
 <tr>
@@ -1872,6 +1863,19 @@
 </tr>
 <tr>
     <td></td>
+    <td></td>
+    <td>
+        <ruby>腸<rt>ちょう</rt></ruby>
+        <ruby>壁<rt>へき</rt></ruby>
+    </td>
+    <td></td>
+    <td></td>
+    <td>
+        bowel wall
+    </td>
+</tr>
+<tr>
+    <td></td>
     <td colspan="2">
         <ruby>胃<rt>い</rt></ruby>
     </td>
@@ -2249,13 +2253,307 @@
 </tr>
 <tr>
     <td></td>
+    <td colspan="2">
+        <ruby>抗原<rt>こうげん</rt></ruby>
+    </td>
+    <td></td>
+    <td colspan="2">
+        antigen /ˈæn tɪ dʒən/
+    </td>
+</tr>
+<tr>
+    <td></td>
     <td></td>
     <td>
-        <ruby><rt></rt></ruby>
+        <ruby>異物<rt>いぶつ</rt></ruby>
     </td>
     <td></td>
     <td></td>
     <td>
+        foreign substance
+    </td>
+</tr>
+<tr>
+    <td></td>
+    <td></td>
+    <td>
+        がん
+        <ruby>細胞<rt>さいぼう</rt></ruby>
+    </td>
+    <td></td>
+    <td></td>
+    <td>
+        cancer cell
+    </td>
+</tr>
+<tr>
+    <td></td>
+    <td></td>
+    <td>
+        <ruby>寄生<rt>きせい</rt></ruby>
+        <ruby>虫<rt>ちゅう</rt></ruby>
+    </td>
+    <td></td>
+    <td></td>
+    <td>
+        parasite
+    </td>
+</tr>
+<tr>
+    <td></td>
+    <td></td>
+    <td>
+        <ruby>食物<rt>しょくもつ</rt></ruby>の
+        <ruby>分子<rt>ぶんし</rt></ruby>
+    </td>
+    <td></td>
+    <td></td>
+    <td>
+        food molecule
+    </td>
+</tr>
+<tr>
+    <td></td>
+    <td></td>
+    <td>
+        <ruby>花粉<rt>かふん</rt></ruby>
+    </td>
+    <td></td>
+    <td></td>
+    <td>
+        pollen /ˈpɒl ən/
+    </td>
+</tr>
+<tr>
+    <td></td>
+    <td></td>
+    <td>
+        ヒスタミン
+    </td>
+    <td></td>
+    <td></td>
+    <td>
+        histamine /ˈhɪs təˌmin/
+    </td>
+</tr>
+<tr>
+    <td></td>
+    <td></td>
+    <td>
+        アレルギー
+        <ruby>反応<rt>はんのう</rt></ruby>
+    </td>
+    <td></td>
+    <td></td>
+    <td>
+        allergic reaction /əˈlɜr dʒɪk/
+    </td>
+</tr>
+<tr>
+    <td></td>
+    <td colspan="2">
+        <ruby>抗体<rt>こうたい</rt></ruby>
+    </td>
+    <td></td>
+    <td colspan="2">
+        antibody /ˈæn tɪˌbɒd i/
+    </td>
+</tr>
+<tr>
+    <td></td>
+    <td></td>
+    <td>
+        <ruby>免疫<rt>めんえき</rt></ruby>グロブリン (=抗体)
+    </td>
+    <td></td>
+    <td></td>
+    <td>
+        immunoglobulin /ˌɪm yə noʊˈglɒb yə lɪn/
+    </td>
+</tr>
+<tr>
+    <td></td>
+    <td></td>
+    <td>
+        <ruby>免疫<rt>めんえき</rt></ruby>
+        <ruby>反応<rt>はんのう</rt></ruby>
+    </td>
+    <td></td>
+    <td></td>
+    <td>
+        immune response
+    </td>
+</tr>
+<tr>
+    <td></td>
+    <td></td>
+    <td>
+        B
+        <ruby>細胞<rt>さいぼう</rt></ruby>、
+        Bリンパ
+        <ruby>球<rt>きゅう</rt></ruby>
+    </td>
+    <td></td>
+    <td></td>
+    <td>
+        B cell, B lymphocyte /ˈlɪm fəˌsaɪt/
+    </td>
+</tr>
+<tr>
+    <td></td>
+    <td></td>
+    <td>
+        <ruby>好<rt>こう</rt></ruby>
+        <ruby>塩基<rt>えんき</rt></ruby>
+        <ruby>球<rt>きゅう</rt></ruby>
+    </td>
+    <td></td>
+    <td></td>
+    <td>
+        basophil /ˈbeɪ sə fɪl/
+    </td>
+</tr>
+<tr>
+    <td></td>
+    <td></td>
+    <td>
+        <ruby>好<rt>こう</rt></ruby>
+        <ruby>酸球<rt>さんきゅう</rt></ruby>
+    </td>
+    <td></td>
+    <td></td>
+    <td>
+        eosinophil /ˌi əˈsɪn ə fɪl/
+    </td>
+</tr>
+<tr>
+    <td></td>
+    <td></td>
+    <td>
+        <ruby>好<rt>こう</rt></ruby>
+        <ruby>中球<rt>ちゅうきゅう</rt></ruby>
+    </td>
+    <td></td>
+    <td></td>
+    <td>
+        neutrophil /ˈnu trə fɪl/
+    </td>
+</tr>
+<tr>
+    <td></td>
+    <td></td>
+    <td>
+        マクロファージ
+    </td>
+    <td></td>
+    <td></td>
+    <td>
+        macrophage /ˈmæk rəˌfeɪdʒ/
+    </td>
+</tr>
+<tr>
+    <td></td>
+    <td></td>
+    <td>
+        <ruby>食<rt>しょく</rt></ruby>
+        <ruby>細胞<rt>さいぼう</rt></ruby>
+    </td>
+    <td></td>
+    <td></td>
+    <td>
+        phagocyte /ˈfæg əˌsaɪtめ
+    </td>
+</tr>
+<tr>
+    <td></td>
+    <td></td>
+    <td>
+        サイトカイン
+    </td>
+    <td></td>
+    <td></td>
+    <td>
+        cytokine /ˈsaɪ təˌkaɪn/
+    </td>
+</tr>
+<tr>
+    <td></td>
+    <td></td>
+    <td>
+        <ruby>樹状<rt>じゅじょう</rt></ruby>
+        <ruby>細胞<rt>さいぼう</rt></ruby>
+    </td>
+    <td></td>
+    <td></td>
+    <td>
+        dendritic cell /dɛnˈdrɪt ɪk/
+    </td>
+</tr>
+<tr>
+    <td></td>
+    <td></td>
+    <td>
+        キラーT
+        <ruby>細胞<rt>さいぼう</rt></ruby>
+    </td>
+    <td></td>
+    <td></td>
+    <td>
+        killer T cell
+    </td>
+</tr>
+<tr>
+    <td></td>
+    <td></td>
+    <td>
+        ヘルパーT
+        <ruby>細胞<rt>さいぼう</rt></ruby>
+    </td>
+    <td></td>
+    <td></td>
+    <td>
+        helper T cell
+    </td>
+</tr>
+<tr>
+    <td></td>
+    <td></td>
+    <td>
+        ナチュラルキラー
+        <ruby>細胞<rt>さいぼう</rt></ruby>
+    </td>
+    <td></td>
+    <td></td>
+    <td>
+        natural killer cell
+    </td>
+</tr>
+<tr>
+    <td></td>
+    <td></td>
+    <td>
+        <ruby>制御<rt>せいぎょ</rt></ruby>
+        <ruby>性<rt>せい</rt></ruby>
+        T
+        <ruby>細胞<rt>さいぼう</rt></ruby>
+    </td>
+    <td></td>
+    <td></td>
+    <td>
+        regulatory (suppressor) T cell
+    </td>
+</tr>
+<tr>
+    <td></td>
+    <td></td>
+    <td>
+        サプレッサーT
+        <ruby>細胞<rt>さいぼう</rt></ruby>
+    </td>
+    <td></td>
+    <td></td>
+    <td>
+        suppressor (regulatory) T cell
     </td>
 </tr>
 
@@ -2285,25 +2583,76 @@
     <td></td>
     <td></td>
     <td>
-        <ruby>腱<rt>けん</rt></ruby>
+        <ruby>胸筋<rt>きょうきん</rt></ruby>
     </td>
     <td></td>
     <td></td>
     <td>
-        tendon /ˈtɛn dən/
+        pectoral muscle /ˈpɛk tər əl/
     </td>
 </tr>
 <tr>
     <td></td>
     <td></td>
     <td>
-        <ruby>腸<rt>ちょう</rt></ruby>
-        <ruby>壁<rt>へき</rt></ruby>
+        <ruby>上腕<rt>じょうわん</rt></ruby>
+        <ruby>二頭筋<rt>にとうきん</rt></ruby>
     </td>
     <td></td>
     <td></td>
     <td>
-        bowel wall
+        biceps muscle
+    </td>
+</tr>
+<tr>
+    <td></td>
+    <td></td>
+    <td>
+        <ruby>外腹<rt>がいふく</rt></ruby>
+        <ruby>斜筋<rt>しゃきん</rt></ruby>
+    </td>
+    <td></td>
+    <td></td>
+    <td>
+        external oblique /əˈblik/
+    </td>
+</tr>
+<tr>
+    <td></td>
+    <td></td>
+    <td>
+        <ruby>腹<rt>ふく</rt></ruby>
+        <ruby>直筋<rt>ちょくきん</rt></ruby>
+    </td>
+    <td></td>
+    <td></td>
+    <td>
+        rectus abdominis /ˈrɛk təs/
+    </td>
+</tr>
+<tr>
+    <td></td>
+    <td></td>
+    <td>
+        <ruby>大腿<rt>だいたい</rt></ruby>
+        <ruby>直筋<rt>ちょくきん</rt></ruby>
+    </td>
+    <td></td>
+    <td></td>
+    <td>
+        rectus femoris
+    </td>
+</tr>
+<tr>
+    <td></td>
+    <td></td>
+    <td>
+        <ruby>大腿<rt>だいたい</rt></ruby>
+        <ruby>四頭筋<rt>しとうきん</rt></ruby>
+    </td>
+    <td></td>
+    <td></td>
+    <td>
     </td>
 </tr>
 <tr>
@@ -2311,6 +2660,91 @@
     <td></td>
     <td>
         <ruby><rt></rt></ruby>
+        <ruby>筋<rt>きん</rt></ruby>
+    </td>
+    <td></td>
+    <td></td>
+    <td>
+    </td>
+</tr>
+<tr>
+    <td></td>
+    <td></td>
+    <td>
+        <ruby><rt></rt></ruby>
+        <ruby>筋<rt>きん</rt></ruby>
+    </td>
+    <td></td>
+    <td></td>
+    <td>
+    </td>
+</tr>
+<tr>
+    <td></td>
+    <td></td>
+    <td>
+        <ruby><rt></rt></ruby>
+        <ruby>筋<rt>きん</rt></ruby>
+    </td>
+    <td></td>
+    <td></td>
+    <td>
+    </td>
+</tr>
+<tr>
+    <td></td>
+    <td></td>
+    <td>
+        <ruby><rt></rt></ruby>
+        <ruby>筋<rt>きん</rt></ruby>
+    </td>
+    <td></td>
+    <td></td>
+    <td>
+    </td>
+</tr>
+<tr>
+    <td></td>
+    <td></td>
+    <td>
+        <ruby><rt></rt></ruby>
+        <ruby>筋<rt>きん</rt></ruby>
+    </td>
+    <td></td>
+    <td></td>
+    <td>
+    </td>
+</tr>
+<tr>
+    <td></td>
+    <td></td>
+    <td>
+        <ruby><rt></rt></ruby>
+        <ruby>筋<rt>きん</rt></ruby>
+    </td>
+    <td></td>
+    <td></td>
+    <td>
+    </td>
+</tr>
+<tr>
+    <td></td>
+    <td></td>
+    <td>
+        <ruby><rt></rt></ruby>
+        <ruby>筋<rt>きん</rt></ruby>
+    </td>
+    <td></td>
+    <td></td>
+    <td>
+    </td>
+</tr>
+<tr>
+    <td></td>
+    <td></td>
+    <td>
+        <ruby><rt></rt></ruby>
+        <ruby>筋<rt>きん</rt></ruby>
     </td>
     <td></td>
     <td></td>
@@ -2535,12 +2969,37 @@
     <td></td>
     <td></td>
     <td>
-        <ruby>椎間板<rt>ついかんばん</rt></ruby>
+        <ruby>軟骨<rt>なんこつ</rt></ruby>
     </td>
     <td></td>
     <td></td>
     <td>
-        intervertebral disk /ˌɪn tərˈvɜr tə brəl/
+        cartilage /ˈkɑr tl ɪdʒ/
+    </td>
+</tr>
+<tr>
+    <td></td>
+    <td></td>
+    <td>
+        <ruby>腱<rt>けん</rt></ruby>
+    </td>
+    <td></td>
+    <td></td>
+    <td>
+        tendon /ˈtɛn dən/
+    </td>
+</tr>
+<tr>
+    <td></td>
+    <td></td>
+    <td>
+        アキレス
+        <ruby>腱<rt>けん</rt></ruby>
+    </td>
+    <td></td>
+    <td></td>
+    <td>
+        Achilles tendon /əˈkɪl iz/
     </td>
 </tr>
 <tr>
@@ -2553,6 +3012,32 @@
     <td></td>
     <td>
         ligament /ˈlɪg ə mənt/
+    </td>
+</tr>
+<tr>
+    <td></td>
+    <td></td>
+    <td>
+        <ruby>椎間<rt>ついかん</rt></ruby>
+        <ruby>板<rt>ばん</rt></ruby>
+    </td>
+    <td></td>
+    <td></td>
+    <td>
+        intervertebral disk /ˌɪn tərˈvɜr tə brəl/
+    </td>
+</tr>
+<tr>
+    <td></td>
+    <td></td>
+    <td>
+        <ruby>半月<rt>はんげつ</rt></ruby>
+        <ruby>板<rt>ばん</rt></ruby>
+    </td>
+    <td></td>
+    <td></td>
+    <td>
+        meniscus /mɪˈnɪs kəs/, (pl) menisci /mɪˈnɪs aɪ/
     </td>
 </tr>
 <tr>
