--- a/dict/human_body.html
+++ b/dict/human_body.html
@@ -25,8 +25,8 @@
     <li><a href="https://courses.lumenlearning.com/suny-ap1/chapter/anatomical-terminology/">
         Regions of the human body
     </a></li>
-    <li><a href="https://www.msdmanuals.com/home/fundamentals/the-human-body">
-        MSD Manual: The human body
+    <li><a href="https://www.msdmanuals.com/home/health-topics">
+        MSD Manual: Health Topics
     </a></li>
     <li><a href="https://training.seer.cancer.gov/anatomy/">
         Anatomy & Physiology, SEER Training Models, National Cancer Institute
@@ -2583,33 +2583,33 @@
     <td></td>
     <td></td>
     <td>
+        <ruby>僧帽<rt>そうぼう</rt></ruby>
+        <ruby>筋<rt>きん</rt></ruby>
+    </td>
+    <td></td>
+    <td></td>
+    <td>
+        trapezius /trəˈpi zi əs/
+    </td>
+</tr>
+<tr>
+    <td></td>
+    <td></td>
+    <td>
         <ruby>胸筋<rt>きょうきん</rt></ruby>
     </td>
     <td></td>
     <td></td>
     <td>
-        pectoral muscle /ˈpɛk tər əl/
+        pectoralis /ˌpɛk təˈræl ɪs/
     </td>
 </tr>
 <tr>
     <td></td>
     <td></td>
     <td>
-        <ruby>上腕<rt>じょうわん</rt></ruby>
-        <ruby>二頭筋<rt>にとうきん</rt></ruby>
-    </td>
-    <td></td>
-    <td></td>
-    <td>
-        biceps muscle
-    </td>
-</tr>
-<tr>
-    <td></td>
-    <td></td>
-    <td>
-        <ruby>外腹<rt>がいふく</rt></ruby>
-        <ruby>斜筋<rt>しゃきん</rt></ruby>
+        <ruby>外<rt>がい</rt></ruby>
+        <ruby>腹斜筋<rt>ふくしゃきん</rt></ruby>
     </td>
     <td></td>
     <td></td>
@@ -2628,6 +2628,85 @@
     <td></td>
     <td>
         rectus abdominis /ˈrɛk təs/
+    </td>
+</tr>
+<tr>
+    <td></td>
+    <td></td>
+    <td>
+        <ruby>広背<rt>こうはい</rt></ruby>
+        <ruby>筋<rt>きん</rt></ruby>
+    </td>
+    <td></td>
+    <td></td>
+    <td>
+        latissimus dorsi /ləˈtɪs ə məs ˈdɔr saɪ/
+    </td>
+</tr>
+<tr>
+    <td></td>
+    <td></td>
+    <td>
+        <ruby>大殿<rt>だいでん</rt></ruby>
+        <ruby>筋<rt>きん</rt></ruby>
+    </td>
+    <td></td>
+    <td></td>
+    <td>
+        gluteus maximus /ˈglu ti əs ˈmæk sə məs/
+    </td>
+</tr>
+<tr>
+    <td></td>
+    <td></td>
+    <td>
+        <ruby>三角<rt>さんかく</rt></ruby>
+        <ruby>筋<rt>きん</rt></ruby>
+    </td>
+    <td></td>
+    <td></td>
+    <td>
+        deltoid /ˈdɛl tɔɪd/
+    </td>
+</tr>
+<tr>
+    <td></td>
+    <td></td>
+    <td>
+        <ruby>上腕<rt>じょうわん</rt></ruby>
+        <ruby>二頭筋<rt>にとうきん</rt></ruby>
+    </td>
+    <td></td>
+    <td></td>
+    <td>
+        biceps brachii /ˈbaɪ sɛps ˈbreɪ kiˌaɪ/
+    </td>
+</tr>
+<tr>
+    <td></td>
+    <td></td>
+    <td>
+        <ruby>上腕<rt>じょうわん</rt></ruby>
+        <ruby>三頭筋<rt>さんとうきん</rt></ruby>
+    </td>
+    <td></td>
+    <td></td>
+    <td>
+        triceps /ˈtraɪ sɛps/
+    </td>
+</tr>
+<tr>
+    <td></td>
+    <td></td>
+    <td>
+        <ruby>腕<rt>わん</rt></ruby>
+        <ruby>橈骨<rt>とうこつ</rt></ruby>
+        <ruby>筋<rt>きん</rt></ruby>
+    </td>
+    <td></td>
+    <td></td>
+    <td>
+        brachioradialis /ˌbreɪ.ki.oʊˌreɪ.diˈæl.ɪs/
     </td>
 </tr>
 <tr>
@@ -2653,102 +2732,46 @@
     <td></td>
     <td></td>
     <td>
+        quadriceps /ˈkwɒd rəˌsɛps/
     </td>
 </tr>
 <tr>
     <td></td>
     <td></td>
     <td>
-        <ruby><rt></rt></ruby>
-        <ruby>筋<rt>きん</rt></ruby>
+        <ruby>大腿<rt>だいたい</rt></ruby>
+        <ruby>二頭筋<rt>にとうきん</rt></ruby>
     </td>
     <td></td>
     <td></td>
     <td>
-    </td>
-</tr>
-<tr>
-    <td></td>
-    <td></td>
-    <td>
-        <ruby><rt></rt></ruby>
-        <ruby>筋<rt>きん</rt></ruby>
-    </td>
-    <td></td>
-    <td></td>
-    <td>
+        biceps femoris /ˈfɛm ər ɪs/
     </td>
 </tr>
 <tr>
     <td></td>
     <td></td>
     <td>
-        <ruby><rt></rt></ruby>
+        ハムストリング
         <ruby>筋<rt>きん</rt></ruby>
     </td>
     <td></td>
     <td></td>
     <td>
+        hamstrings
     </td>
 </tr>
 <tr>
     <td></td>
     <td></td>
     <td>
-        <ruby><rt></rt></ruby>
+        <ruby>腓腹<rt>ひふく</rt></ruby>
         <ruby>筋<rt>きん</rt></ruby>
     </td>
     <td></td>
     <td></td>
     <td>
-    </td>
-</tr>
-<tr>
-    <td></td>
-    <td></td>
-    <td>
-        <ruby><rt></rt></ruby>
-        <ruby>筋<rt>きん</rt></ruby>
-    </td>
-    <td></td>
-    <td></td>
-    <td>
-    </td>
-</tr>
-<tr>
-    <td></td>
-    <td></td>
-    <td>
-        <ruby><rt></rt></ruby>
-        <ruby>筋<rt>きん</rt></ruby>
-    </td>
-    <td></td>
-    <td></td>
-    <td>
-    </td>
-</tr>
-<tr>
-    <td></td>
-    <td></td>
-    <td>
-        <ruby><rt></rt></ruby>
-        <ruby>筋<rt>きん</rt></ruby>
-    </td>
-    <td></td>
-    <td></td>
-    <td>
-    </td>
-</tr>
-<tr>
-    <td></td>
-    <td></td>
-    <td>
-        <ruby><rt></rt></ruby>
-        <ruby>筋<rt>きん</rt></ruby>
-    </td>
-    <td></td>
-    <td></td>
-    <td>
+        gastrocnemius /ˌgæs trɒkˈni mi əs/
     </td>
 </tr>
 <tr>
