human body done

--- a/dict_human_body.html
+++ b/dict_human_body.html
@@ -1633,7 +1633,7 @@
     <td></td>
     <td></td>
     <td>
-        lymph /lɪmf/
+        lymph node
     </td>
 </tr>
 <tr>
@@ -2285,6 +2285,28 @@
     </td>
     <td colspan="3">
         immune system
+    </td>
+</tr>
+<tr>
+    <td></td>
+    <td colspan="2">
+        <ruby>自然<rt>しぜん</rt></ruby>
+        <ruby>免疫<rt>めんえき</rt></ruby>
+    </td>
+    <td></td>
+    <td colspan="2">
+        innate immunity /ɪˈneɪt/
+    </td>
+</tr>
+<tr>
+    <td></td>
+    <td colspan="2">
+        <ruby>獲得<rt>かくとく</rt></ruby>
+        <ruby>免疫<rt>めんえき</rt></ruby>
+    </td>
+    <td></td>
+    <td colspan="2">
+        aquiured immunity
     </td>
 </tr>
 <tr>
@@ -3284,7 +3306,8 @@
     <td></td>
     <td></td>
     <td>
-        <ruby>脂腺<rt>しせん</rt></ruby>
+        <ruby>脂<rt>し</rt></ruby>
+        <ruby>腺<rt>せん</rt></ruby>
     </td>
     <td></td>
     <td></td>
@@ -3319,7 +3342,8 @@
     <td></td>
     <td></td>
     <td>
-        <ruby>外耳<rt>がいじ</rt></ruby>
+        <ruby>外<rt>がい</rt></ruby>
+        <ruby>耳<rt>じ</rt></ruby>
     </td>
     <td></td>
     <td></td>
@@ -3332,7 +3356,8 @@
     <td></td>
     <td>
         <ruby>耳<rt>みみ</rt></ruby>たぶ、
-        <ruby>耳介<rt>じかい</rt></ruby>
+        <ruby>耳<rt>じ</rt></ruby>
+        <ruby>介<rt>かい</rt></ruby>
     </td>
     <td></td>
     <td></td>
@@ -3357,7 +3382,8 @@
     <td></td>
     <td></td>
     <td>
-        <ruby>中耳<rt>ちゅうじ</rt></ruby>
+        <ruby>中<rt>ちゅう</rt></ruby>
+        <ruby>耳<rt>じ</rt></ruby>
     </td>
     <td></td>
     <td></td>
@@ -3369,7 +3395,8 @@
     <td></td>
     <td></td>
     <td>
-        <ruby>鼓膜<rt>こまく</rt></ruby>
+        <ruby>鼓<rt>こ</rt></ruby>
+        <ruby>膜<rt>まく</rt></ruby>
     </td>
     <td></td>
     <td></td>
@@ -3381,7 +3408,8 @@
     <td></td>
     <td></td>
     <td>
-        <ruby>内耳<rt>ないじ</rt></ruby>
+        <ruby>内<rt>ない</rt></ruby>
+        <ruby>耳<rt>じ</rt></ruby>
     </td>
     <td></td>
     <td></td>
@@ -3419,7 +3447,8 @@
     <td></td>
     <td></td>
     <td>
-        <ruby>蝸牛<rt>かぎゅう</rt></ruby>
+        <ruby>蝸<rt>か</rt></ruby>
+        <ruby>牛<rt>ぎゅう</rt></ruby>
     </td>
     <td></td>
     <td></td>
@@ -3431,7 +3460,8 @@
     <td></td>
     <td></td>
     <td>
-        <ruby>耳管<rt>じかん</rt></ruby>
+        <ruby>耳<rt>じ</rt></ruby>
+        <ruby>管<rt>かん</rt></ruby>
     </td>
     <td></td>
     <td></td>
@@ -3467,7 +3497,7 @@
     <td></td>
     <td></td>
     <td>
-        <ruby>音<rt></rt></ruby>
+        <ruby>音<rt>おと</rt></ruby>
     </td>
     <td></td>
     <td></td>
@@ -3489,7 +3519,8 @@
     <td></td>
     <td></td>
     <td>
-        <ruby>鼻腔<rt>びこう</rt></ruby>
+        <ruby>鼻<rt>び</rt></ruby>
+        <ruby>腔<rt>こう</rt></ruby>
     </td>
     <td></td>
     <td></td>
@@ -3894,7 +3925,7 @@
     <td></td>
     <td></td>
     <td>
-        <ruby>涙腺<rt></rt></ruby>
+        <ruby>涙腺<rt>るいせん</rt></ruby>
     </td>
     <td></td>
     <td></td>
@@ -4312,7 +4343,7 @@
     <td></td>
     <td></td>
     <td>
-        fetus
+        fetus /ˈfi təs/
     </td>
 </tr>
 <tr>
@@ -4376,28 +4407,6 @@
     <td></td>
     <td>
         postpartum
-    </td>
-</tr>
-<tr>
-    <td></td>
-    <td></td>
-    <td>
-        <ruby><rt></rt></ruby>
-    </td>
-    <td></td>
-    <td></td>
-    <td>
-    </td>
-</tr>
-<tr>
-    <td></td>
-    <td></td>
-    <td>
-        <ruby><rt></rt></ruby>
-    </td>
-    <td></td>
-    <td></td>
-    <td>
     </td>
 </tr>
 
@@ -4697,7 +4706,6 @@
     <td>
         <ruby>若年<rt>じゃくねん</rt></ruby>
         <ruby>期<rt>き</rt></ruby>
-        <ruby>子供<rt>こども</rt></ruby>
     </td>
     <td></td>
     <td></td>
